syntax = "proto3";

package news.v1;

message NewsEvent {
  // референс на source id
  string source_id = 1;

  string title = 2;
  string content = 3;

  int64 published_at = 4;
}